force-app/main/default/objects/Quote_Creation_API_Payload_Validation__mdt/Quote_Creation_API_Payload_Validation__mdt.object-meta.xml
<CustomObject>
    <label>Quote Creation API Payload Validation</label>
    <pluralLabel>Quote Creation API Payload Validations</pluralLabel>
</CustomObject>