force-app/main/default/objects/Quote_Creation_API_Payload_Validation__mdt/fields/Level2FieldsPart4__c.field-meta.xml
<CustomField>
    <fullName>Level2FieldsPart4__c</fullName>
    <label>Level2FieldsPart4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>