force-app/main/default/objects/Quote_Creation_API_Payload_Validation__mdt/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>